--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.5.3",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "mongodb": "^4.5.0",
-    "next": "12.1.0",
+    "next": "^12.1.5",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
