--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "framer-motion": "^6.3.3",
     "mongodb": "^4.5.0",
     "next": "^12.1.5",
-    "next-auth": "^4.3.1",
+    "next-auth": "^4.3.4",
+    "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
