--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.7.3-alpha.2"
+    "recoil": "^0.7.3-alpha.2",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
